Adicionado suporte a caminhos de arquivo relativos e absolutos no Player de Video